# crisp-opensource-impl

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: ClangTidy.cmake  Sanitizers.cmake  Warnings.cmake
crisp-core/: CMakeLists.txt
crisp-core/include/crisp/core/: key_resolver.h  message.h  replay_window.h  suites.h  types.h
crisp-core/include/crisp/crypto/: dummy_backend.h  iface.h
crisp-core/src/: crypto_iface.c  dummy_crypto_backend.c  message.c  replay_window.c  suites.c
crisp-driver/: CMakeLists.txt  README.md
crispctl/: CMakeLists.txt
crispctl/src/: main.cpp
docs/: architecture.md  build.md  protocol.md  roadmap.md
tests/: CMakeLists.txt
tests/fixtures/: README.md
tests/integration/: README.md
tests/test_vectors/: README.md
tests/unit/: test_golden_vectors.cpp  test_message.cpp  test_replay_window.cpp  test_suites.cpp
